# nexus-agent

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  plugin.json  pnpm-lock.yaml
.github/workflows/: docker.yml
crates/nexus-anthropic/: Cargo.toml
crates/nexus-anthropic/src/: client.rs  lib.rs  provider.rs  stream.rs
crates/nexus-aws-bedrock/: Cargo.toml
crates/nexus-aws-bedrock/src/: lib.rs
crates/nexus-compaction/: Cargo.toml
crates/nexus-compaction/src/: lib.rs  pruning.rs  summarize.rs
crates/nexus-core/: Cargo.toml
crates/nexus-core/src/: lib.rs  tasks.rs
crates/nexus-daemon/: Cargo.toml
crates/nexus-daemon-tests/: Cargo.toml
crates/nexus-daemon-tests/src/: client.rs  fixtures.rs  harness.rs  lib.rs  mock_llm.rs  sse.rs
crates/nexus-daemon-tests/src/tests/: agents.rs  browse.rs  chat.rs  conversation_paths.rs  conversations.rs  debug_endpoints.rs  error_cases.rs  event_emission.rs  health.rs  hooks.rs  lsp.rs  mcp_servers.rs  persistence.rs  processes.rs  providers.rs  settings.rs  sse.rs  sse_advanced.rs  tools.rs  turn_lifecycle.rs  workspace_projects.rs  workspaces.rs
crates/nexus-daemon/src/: config.rs  conversation_context.rs  event_bus.rs  hook_probe.rs  main.rs  module.rs  retry.rs  task_context.rs  workspace.rs
crates/nexus-daemon/src/agent/: emitter.rs  events.rs  mod.rs  run.rs  sub_agent.rs  tool_dispatch.rs
crates/nexus-daemon/src/agent_config/: mod.rs  service.rs  store.rs  types.rs
crates/nexus-daemon/src/anthropic/: client.rs  mod.rs  stream.rs  types.rs
crates/nexus-daemon/src/ask_user/: mod.rs
crates/nexus-daemon/src/auto_title/: mod.rs
crates/nexus-daemon/src/bash/: mod.rs
crates/nexus-daemon/src/bg_process/: manager.rs  mod.rs  tools.rs  types.rs
crates/nexus-daemon/src/compaction/: mod.rs  pruning.rs  summarize.rs
crates/nexus-daemon/src/config/: fetch.rs  mod.rs
crates/nexus-daemon/src/control_plane/: mod.rs
crates/nexus-daemon/src/conversation/: mod.rs  types.rs
crates/nexus-daemon/src/fetch/: mod.rs
crates/nexus-daemon/src/filesystem/: mod.rs  ops.rs  validate.rs
crates/nexus-daemon/src/lsp/: config.rs  decorator.rs  languages.rs  manager.rs  mod.rs  module.rs  server.rs
crates/nexus-daemon/src/mcp/: handler.rs  mod.rs  server.rs  store.rs
crates/nexus-daemon/src/mcp_resources/: mod.rs
crates/nexus-daemon/src/mechanics/: auto_title.rs  mod.rs
crates/nexus-daemon/src/pricing/: mod.rs
crates/nexus-daemon/src/project/: mod.rs
crates/nexus-daemon/src/provider/: anthropic_provider.rs  bedrock_provider.rs  error.rs  factory.rs  mod.rs  service.rs  store.rs  types.rs
crates/nexus-daemon/src/server/: agent_api.rs  browse.rs  chat.rs  conversations.rs  debug.rs  introspect.rs  lsp_api.rs  mcp_api.rs  message_queue.rs  mod.rs  project_api.rs  providers.rs  services.rs  settings_api.rs  sse.rs  turn.rs  workspace_api.rs
crates/nexus-daemon/src/system_prompt/: fence.rs  mod.rs  providers.rs
crates/nexus-daemon/src/tasks/: mod.rs  service.rs  store.rs  tools.rs  types.rs
crates/nexus-daemon/src/thread/: cache.rs  mod.rs  store.rs
crates/nexus-daemon/src/tool_filter/: mod.rs
crates/nexus-daemon/src/tool_spill/: mod.rs
crates/nexus-daemon/src/workspace/: mod.rs
crates/nexus-lsp/: Cargo.toml
crates/nexus-lsp/src/: config.rs  detect.rs  diagnostics.rs  lib.rs  manager.rs  protocol.rs
crates/nexus-pricing/: Cargo.toml
crates/nexus-pricing/src/: lib.rs
crates/nexus-provider/: Cargo.toml
crates/nexus-provider/src/: error.rs  lib.rs  provider_config.rs  types.rs
crates/nexus-tools/: Cargo.toml
crates/nexus-tools/src/: ask_user.rs  bash.rs  bg_process.rs  config.rs  fetch.rs  lib.rs  tasks.rs
crates/nexus-tools/src/filesystem/: mod.rs  ops.rs
docs/: architecture.md  event-protocol.md
examples/: chat.rs
server/: package.json
server/src/: agent.ts  agents.ts  auth.ts  client-factory.ts  discovery.ts  index.ts  mcp-client.ts  mcp-handler.ts  nexus.ts  profiles.ts  providers.ts  round-runner.ts  settings.ts  sse-handler.ts  storage.ts  streaming.ts  timing.ts  tool-events.ts  tool-registry.ts  tool-settings.ts  tools.ts  types.ts  ui-tools.ts  ws-handler.ts
server/src/system-message/: types.ts
server/src/tools/: executor.ts  types.ts
src/: context.rs  error.rs  events.rs  lib.rs  provider.rs  session.rs  tools.rs  types.rs
src/decorator/: mod.rs  redaction.rs  source_tag.rs
src/inference/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/memory/: embedding.rs  error.rs  manager.rs  mod.rs  scoring.rs  store.rs  types.rs
src/memory/embedders/: ollama.rs
src/memory/stores/: qdrant.rs
src/tools/: handler.rs  mod.rs  pipeline.rs  registry.rs
src/tools/builtin/: mod.rs
ui/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/api/: client.ts
ui/src/components/: AgentSwitcher.tsx  ChatArea.tsx  ChatInput.tsx  ContextRing.tsx  ConversationItem.tsx  EmptyState.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  ProfileEditor.tsx  ProfileSwitcher.tsx  SettingsPanel.tsx  Sidebar.tsx  StreamingCursor.tsx  TimingWaterfall.tsx  ToolCallBlock.tsx
ui/src/hooks/: useAutoScroll.ts  useChatStream.ts  useMcpToolMetadata.ts  useScrollLock.ts  useStreamBroadcasts.ts  useStreamingChat.ts
ui/src/lib/: mcp-app-service.ts  message-tree.ts  remark-plugins.ts  snowflake.ts  stream-consumer.ts  tool-descriptions.ts  tool-invoke.ts
(+77 files in other folders)
