[package]
name = "nexus-agent"
version = "0.1.0"
edition = "2021"
description = "Autonomous agent crate for Nexus"

[features]
default = []
qdrant = ["dep:qdrant-client"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
qdrant-client = { version = "1", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "fs", "io-util", "macros", "rt"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
