[workspace]
members = [
    "crates/nexus-core",
    "crates/nexus-provider",
    "crates/nexus-anthropic",
    "crates/nexus-aws-bedrock",
    "crates/nexus-lsp",
    "crates/nexus-pricing",
    "crates/nexus-compaction",
    "crates/nexus-tools",
    "crates/nexus-daemon",
    "crates/nexus-daemon-tests",
]
resolver = "2"
