[package]
name = "nexus-daemon-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "nexus_daemon_tests"

[dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
anyhow = "1"
