[package]
name = "nexus-daemon"
version = "0.1.0"
edition = "2021"
default-run = "nexus"

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.13", features = ["stream", "json"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dirs = "6"
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
rmcp = { version = "0.16", features = ["client", "transport-child-process", "server", "transport-streamable-http-server", "transport-streamable-http-client-reqwest"] }
dotenvy = "0.15"
async-trait = "0.1"
url = "2"
aws-config = { version = "1", features = ["behavior-version-latest", "credentials-login"] }
aws-sdk-bedrock = "1"
aws-sdk-bedrockruntime = "1"
lsp-types = "0.97"
which = "7"
nexus-core = { path = "../nexus-core" }
nexus-provider = { path = "../nexus-provider" }
nexus-anthropic = { path = "../nexus-anthropic" }
nexus-aws-bedrock = { path = "../nexus-aws-bedrock" }
nexus-lsp = { path = "../nexus-lsp" }
nexus-pricing = { path = "../nexus-pricing" }
nexus-compaction = { path = "../nexus-compaction" }
