[package]
name = "nexus-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-provider = { path = "../nexus-provider" }
tokio = { version = "1", features = ["process", "time", "macros", "rt"] }
reqwest = { version = "0.13", features = ["stream"] }
url = "2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
chrono = "0.4"
dirs = "6"
